<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="20dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a New Account"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttondesign">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Quiz.TextInputLayout"
            android:background="@android:color/transparent"
            android:hint="@string/name">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>
        <!-- Snippet from "Add buttons" section goes here. -->


        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Quiz.TextInputLayout"
            android:background="@android:color/transparent"
            android:hint="@string/email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Quiz.TextInputLayout"
            android:background="@android:color/transparent"
            android:hint="@string/phone">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Quiz.TextInputLayout"
            android:hint="@string/shr_hint_password"
            app:passwordToggleEnabled="true"
            android:background="@android:color/transparent"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:background="@android:color/transparent"
                />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            style="@style/Widget.Quiz.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textSize="15dp"
            android:background="@drawable/buttondesign"
            />


</LinearLayout>
</ScrollView>